--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.75.0",
 		"@vercel/functions": "^2.0.3",
 		"@whop/api": "^0.0.50",
 		"@whop/react": "0.2.36",
 		"axios": "^1.12.2",
+		"cheerio": "^1.1.2",
 		"date-fns": "^4.1.0",
 		"lucide-react": "^0.545.0",
 		"next": "15.3.2",
