--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.75.0",
 		"@vercel/functions": "^2.0.3",
+		"@whop-apps/sdk": "0.0.1-canary.117",
 		"@whop/api": "^0.0.50",
 		"@whop/react": "^0.2.46",
 		"axios": "^1.12.2",
